fix paging align + alert popup style

--- a/src/app/pages/product-list/product-list.component.css
+++ b/src/app/pages/product-list/product-list.component.css
@@ -1,5 +1,6 @@
 .qns-paging .ngx-pagination{
     text-align: center;
+    padding: 0;
 }
 .qns-paging .ngx-pagination li.current{
     background: #fff;
